# Data-Agent-System

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data_agent_system/: README.md
data_agent_system/agent_txn/: agent_txn_context.h  agent_txn_manager.h  commit_log_io.h  commit_log_recovery.h  commit_log_replay.h  commit_manager.h  fallback_commit_log.h  fallback_commit_recovery.h  recovery_manager.h  rollback_manager.h  validation_manager.h
data_agent_system/branch/: branch_context.h  branch_manager.h  branch_result.h
data_agent_system/cache/: object_cache.h  read_set.h  savepoint.h  write_buffer.h
data_agent_system/experiments/: README.md  commit_log_replay.py  parse_results.py  run_contention.sh  run_e2e_closed_loop.sh  run_synthetic.sh  smoke_verify_artifacts.sh  task_event_log_replay.py  task_event_recovery.py  task_runtime_recovery.py  verify_artifacts.py  verify_commit_logs.py  verify_recovery_artifacts.py  verify_replayed_state.py  verify_store_config.py  verify_task_event_logs.py  verify_task_runtime_recovery_continue_demo.py  verify_task_runtime_recovery_demo.py
data_agent_system/experiments/testdata/: replayed_state_expected.csv  store_config_sample.txt  synthetic_results_sample.csv  synthetic_store_recovery_base.tsv  synthetic_store_recovery_base.tsv.journal  synthetic_store_recovery_base.tsv.tmp  synthetic_store_recovery_expected.csv  synthetic_store_reload_expected.csv  synthetic_store_sample.tsv  task_recovery_expected.csv  task_replayed_state_expected.csv  task_runtime_recovery_continue_demo_expected.txt  task_runtime_recovery_demo_expected.txt  task_runtime_recovery_expected.csv
data_agent_system/intent/: intent.h  intent_log.h  intent_type.h  policy_dispatcher.h
data_agent_system/runtime/: execution_plan.h  task_context.h  task_continuation.h  task_continuation_registry.h  task_event_log_io.h  task_event_log_replay.h  task_recovery.h  task_recovery_execution.h  task_recovery_manager.h  task_runtime.h  task_session.h
data_agent_system/storage/: file_kv_store.h  memory_kv_store.h  non_batch_memory_kv_store.h  redis_adapter.h  rocksdb_adapter.h  store_config_io.h  store_factory.h  versioned_kv_store.h
data_agent_system/workloads/: README.md  register_builtin_recovery_handlers.h
data_agent_system/workloads/agent_task/: README.md  minimal_candidate_recovery.h  minimal_candidate_task.h
data_agent_system/workloads/kv_style/: README.md  scripted_kv_task.h
docs/: README.md  agent_driven_end_to_end_flow.md  data_agent_system_kv_design.md  data_agent_system_kv_implementation_audit.md
examples/: README.md  agent_retry_loop_demo.cc  commit_log_dir_recovery_demo.cc  commit_log_recovery_demo.cc  commit_log_replay_demo.cc  fallback_crash_safe_demo.cc  kv_style_workflow.cc  minimal_flow_demo.cc  multi_object_atomicity_demo.cc  non_batch_fallback_demo.cc  semantic_concurrency_demo.cc  semantic_contention_demo.cc  synthetic_experiment.cc  task_event_log_replay_demo.cc  task_event_recovery_demo.cc  task_runtime_recovery_continue_demo.cc  task_runtime_recovery_demo.cc  task_runtime_workflow.cc  workload_recovery_registry_demo.cc
(+3 files in other folders)
